--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
       "gulp-jshint": "~1.8.4",
       "bower": "1.2.6"
    },
-
    "author": {
       "name": "Nick Smith",
       "email": "fuhton@gmail.com"
@@ -22,5 +21,16 @@
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
       "postinstall": "./node_modules/bower/bin/bower install"
+   },
+   "devDependencies": {
+      "gulp": "^3.6.2",
+      "gulp-connect": "^2.0.6",
+      "gulp-jshint": "^1.8.5",
+      "gulp-browserify": "^0.5.0",
+      "gulp-rename": "^1.2.0",
+      "jquery": "^2.1.1",
+      "backbone": "^1.1.2",
+      "underscore": "^1.7.0",
+      "handlebars": "^2.0.0"
    }
 }
