--- a/package.json
+++ b/package.json
@@ -1,38 +1,41 @@
 {
-	"name": "backbone-midi",
-	"version": "0.0.1",
-	"description": "Backbone MIDI",
-	"main": "index.js",
-	"repository": {
-		"type": "git",
-		"url": "git@github.com:fuhton/"
-	},
-	"license": "MIT",
-	"dependencies": {
-		"gulp": "~3.6.0",
-		"gulp-connect": "~2.0.0",
-		"gulp-jshint": "~1.8.4",
-		"bower": "1.2.6"
-	},
-	"author": {
-		"name": "Nick Smith",
-		"email": "fuhton@gmail.com"
-	},
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"devDependencies": {
-		"backbone": "^1.1.2",
-		"browserify": "^6.2.0",
-		"fs": "0.0.2",
-		"gulp-browserify": "^0.5.0",
-		"gulp-rename": "^1.2.0",
-		"handlebars": "^2.0.0",
-		"install": "^0.1.7",
-		"jquery": "^2.1.1",
-		"npm": "^2.1.6",
-		"stringify": "^3.0.0",
-		"underscore": "^1.7.0",
-		"vinyl-source-stream": "^1.0.0"
-	}
+  "name": "backbone-midi",
+  "version": "0.0.1",
+  "description": "Backbone MIDI",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:fuhton/"
+  },
+  "license": "MIT",
+  "dependencies": {
+    "gulp": "~3.9.1",
+    "gulp-connect": "~2.0.0",
+    "gulp-jshint": "~1.8.4",
+    "bower": "1.2.6"
+  },
+  "author": {
+    "name": "Nick Smith",
+    "email": "fuhton@gmail.com"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "backbone": "^1.1.2",
+    "browserify": "^6.2.0",
+    "fs": "0.0.2",
+    "gulp": "^3.9.1",
+    "gulp-browserify": "^0.5.0",
+    "gulp-rename": "^1.2.0",
+    "handlebars": "^2.0.0",
+    "install": "^0.1.7",
+    "jquery": "^2.1.1",
+    "npm": "^2.1.6",
+    "strictify": "^0.2.0",
+    "stringify": "^3.0.0",
+    "uglify": "^0.1.5",
+    "underscore": "^1.7.0",
+    "vinyl-source-stream": "^1.0.0"
+  }
 }
