--- a/package.json
+++ b/package.json
@@ -1,38 +1,33 @@
 {
-  "name": "backbone-midi",
-  "version": "0.0.1",
-  "description": "Backbone MIDI",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:fuhton/"
-  },
-  "license": "MIT",
-  "dependencies": {
-    "gulp": "~3.6.0",
-    "gulp-connect": "~2.0.0",
-    "gulp-jshint": "~1.8.4",
-    "bower": "1.2.6"
-  },
-  "author": {
-    "name": "Nick Smith",
-    "email": "fuhton@gmail.com"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "devDependencies": {
-    "backbone": "^1.1.2",
-    "browserify": "^6.2.0",
-    "fs": "0.0.2",
-    "gulp-browserify": "^0.5.0",
-    "gulp-rename": "^1.2.0",
-    "handlebars": "^2.0.0",
-    "install": "^0.1.7",
-    "jquery": "^2.1.1",
-    "npm": "^2.1.6",
-    "stringify": "^3.0.0",
-    "underscore": "^1.7.0",
-    "vinyl-source-stream": "^1.0.0"
-  }
+	"name": "backbone-midi",
+	"version": "0.0.1",
+	"description": "Backbone MIDI",
+	"main": "app/js/main.js",
+	"repository": {
+		"type": "git",
+		"url": "git@github.com:fuhton/"
+	},
+	"license": "MIT",
+	"author": {
+		"name": "Nick Smith",
+		"email": "fuhton@gmail.com"
+	},
+	"browserify": {
+		"transform": [
+			"babelify"
+		]
+	},
+	"scripts": {
+		"build": "NODE_ENV=production browserify app/js/main.js | uglifyjs -cm > build/bundle.js",
+		"start": "ecstatic -p 8000",
+		"watch": "watchify app/js/main.js -o build/bundle.js -dv"
+	},
+	"dependencies": {
+		"babelify": "^6.1.3",
+		"browserify": "^10.2.6",
+		"ecstatic": "~0.8.0",
+		"react": "~0.13.3",
+		"uglify-js": "^2.4.24",
+		"watchify": "^3.2.3"
+	}
 }
